--- a/RMDataManager/Web.config
+++ b/RMDataManager/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="RMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=RMData;Integrated Security=True"/>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-RMDataManager-497c3959-1fc5-4f54-932c-8e6d11d60f30;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-RMDataManager-497c3959-1fc5-4f54-932c-8e6d11d60f30.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
