Add Saving Cart to the DB
All the changes necessary to save the shopppingcart to db

--- a/RMDataManager/Web.config
+++ b/RMDataManager/Web.config
@@ -12,7 +12,9 @@
     <add name="RMData" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=RMData;Integrated Security=True" />
     <add name="EFData" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EFData;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\EFData.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="taxRate" value="8,75" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
